--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ DB_HOST=localhost
 DB_NAME=todo_app
 DB_PASSWORD=admin123
 DB_PORT=5432
-EMAIL=mubashir11131719@gmail.com
-EMAIL_PASSWORD=fCtTOgsIYZoNr7tWbZBU
+EMAIL=
+EMAIL_PASSWORD=
 JWT_SECRET=fnieu636
 CLIENT_URL=http://localhost:3000
 PORT=3000
