--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "migrate": "node migrate.js"
+    "migrate": "node migrate.js",
+    "test": "mocha --timeout 10000"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,13 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
+    "playwright": "^1.44.1",
+    "puppeteer": "^22.10.0",
     "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.4.0"
   }
 }
